# birdclef-2025

./: .gitignore  LICENSE  README.md  augmentation.py  birdclef.ipynb  preprocessing.py  pyproject.toml  training.py  waveform_comparaison.py
